# pandaRec

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  basic_tests.ipynb  cars.json  example_functionality.ipynb  expose_keynotes.md  generate_keywords.ipynb  generate_recipes.ipynb  manual_recipes_to_json.ipynb  one_click_demo.ipynb  pandaRec.py  pandaWidget.py  pyproject.toml  recipes.yaml  recipes_autoinport_from_library.yaml  recipes_manual.json  recipes_manual.txt  requirements.in  requirements.txt  setup.cfg  test  test.ipynb  working.txt  yaml_test.ipynb
.github/workflows/: python-app.yml
data_loading/: analysis.ipynb  body_markdown.ipynb  load_stackoverflow.ipynb  load_stackoverflow.py  tests.ipynb
docs/: requirements.txt
docs/source/: api_reference.rst  conf.py  getting_started.rst  index.rst  strategies.rst
documentation/: current_questions.md  expose.md  recipes.md  strategies.md
evaluation/: average_length.ipynb  codesearchnet.ipynb  compare_datasets.ipynb  create_dcng.ipynb  create_test_set.ipynb  teat_data.csv  test_data.csv  test_data_chatgpt.csv  test_data_results.csv  test_data_results_scored.csv  test_delays.ipynb  test_set.md  test_setup_time.ipynb
examples/: BoolRenderer.ipynb  example_functionality.ipynb  recipes.yaml  recipes2.yaml  search_index.pkl  server.py  test.ipynb  test_ipydatagrid.ipynb  testing_index_search.ipynb  testing_semantic_search.ipynb  web_based_example.ipynb
examples/ipydatagrid_examples/: BoolRenderer.ipynb  DataGrid.ipynb  Text Wrapping and Eliding.ipynb
examples/testing_setup/: testing_index_search.ipynb  testing_semantic_search.ipynb
guides/: cookbook.md  made_by_pandas.md
pandaRec/: __init__.py  context.py  copy_button.py  copybutton.py  lemmatize.py  ml_embeddings.py  pandaRecWidget.py  panda_rec_widget.py  recipe.py  recommender.py  search_index.py  strategies.py  types.py
pandarec/: __init__.py  context.py  ml_embeddings.py  panda_rec_widget.py  recommender.py  strategies.py
process_documentation/: current_questions.md  recipes.md  slides.md  strategies.md
recipes/: add_more_info.ipynb  change_to_json.ipynb  embeddings.pt  openai_embeddings.pt  recipes.json  recipes.yaml  search_index.pkl
recipes/from_docstrings/: embeddings.pt  search_index.pkl
recipes/from_snippets/: recipes.json
recipes/generation_notebooks/: add_code.ipynb  change_to_json.ipynb  generate_keywords.ipynb  recipes_from_snippets.ipynb  remove_empty_descriptions.ipynb
stackoverflow_data/: analysis.ipynb  combine_datasets.ipynb  train_model.ipynb
test/: test_context.py  test_copybutton.py  test_ml_embeddings.py  test_panda_rec_widget.py  test_recipe.py  test_recommender.py  test_search_index.py
tests/: test_context.py  test_dummy.py  test_recipe.py  test_recommender.py
