[metadata]
name = pandaRec
version = 0.0.1
author = add-IV
author_email = frederick.vandermoeten@stud.uni-heidelberg.de
description = A package for recommending panda snippets
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/add-IV/bachelor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
dependencies = [
    "ipydatagrid",
    "ipywidgets",
    "pandas",
    "pyyaml"
]