[metadata]
name = pandaRec
version = 0.0.1
author = add-IV
author_email = frederick.vandermoeten@stud.uni-heidelberg.de
description = A package for recommending panda snippets
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/add-IV/bachelor
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
[options]
packages = find:
python_requires = >=3.7
install_requires =
    ipywidgets>=7.6.0,<9
    ipydatagrid>=1.1.15
    pandas>=1.4.0
    openai>=0.28
    sentence_transformers
    rapidfuzz>=2.2
    # missing in openai
    matplotlib>=3
    plotly>=5